feat: finish replace string id with NamespacedKey